# QR2

./: .gitignore  README.md  backand.py  backend.py  frontend.py  languages.py  pyproject.toml  requirements.txt
