[tool.poetry]
name = "qr-generator"
version = "0.1.0"
description = "Генератор QR-кодов с поддержкой шифрования и мультиязычности"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^10.2.0"
qrcode = "^7.4.2"
cryptography = "^42.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 